# coal-mind-linear-regression

./: Cargo.toml  README.md  project-structure.md
benches/: benchmarks.rs
examples/: basic_example.rs  elastic_net_example.rs  lasso_example.rs  ridge_example.rs
flows/: base_flow.mermaid  elastic_net_flow.mermaid  elastic_net_flow_pre.mermaid.txt  lasso_flow.mermaid  ridge_flow.mermaid
src/: base.rs  elastic_net.rs  lasso.rs  lib.rs  ridge.rs
tests/: basic_test.rs  elastic_net_test.rs  lasso_test.rs  ridge_test.rs
