[package]
name = "coal-mind-linear-regression"
version = "0.1.0"
edition = "2021"
authors = ["Kolden Axelson"]
description = "A linear regression implementation in Rust"
license = "MIT"
repository = ""
keywords = ["machine-learning", "statistics", "regression", "linear-algebra"]
categories = ["science", "mathematics"]

# Main dependencies
[dependencies]
nalgebra = "0.32"

# Development & testing dependencies
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }   # for benchmarking when ready
plotters = "0.3"                                               # Added for visualization
rand = "0.8"                                                   # Added for generating sample data
rand_distr = "0.4"                                             # Added for normal distribution

# Test configuration
[[test]]
name = "basic_test"
path = "tests/basic_test.rs"

[[test]]
name = "lasso_test"
path = "tests/lasso_test.rs"

[[test]]
name = "ridge_test"
path = "tests/ridge_test.rs"

[[test]]
name = "elastic_net_test"
path = "tests/elastic_net_test.rs"

# Example List
[[example]]
name = "basic_example"
path = "examples/basic_example.rs"

[[example]]
name = "lasso_example"
path = "examples/lasso_example.rs"

[[example]]
name = "ridge_example"
path = "examples/ridge_example.rs"

[[example]]
name = "elastic_net_example"
path = "examples/elastic_net_example.rs"

# Benchmark Configuration 
[[bench]]
name = "regression_benchmarks"
path = "benches/benchmarks.rs"
harness = false